# eeg-models

./: .pre-commit-config.yaml  Dataset_class.py  README.md  datasets.py  eeg.pth  pyproject.toml  setup.cfg  test_main.py  test_main1.py  test_main2.py  transformers.py  transforms.py
.dvc/: config
.github/workflows/: main.yml
data/: .gitignore  alex_mi.dvc  bi2013a.dvc  demons.dvc  demons_p300_dataset.dvc  epfl_p300.dvc  nery_demons_dataset.dvc
eeg_models/: EEGNet.py  EegNet.py  __init__.py  abstract.py  anomalydetection.py  anomalydetection1.py  braininvaders.py  datasets.py  datasets_Demons7.py  datasets_DemonsP300.py  eegnet.py  pyrimanianclassifier.py  scratch.py  search_params_braininvaders.py  search_params_eeg.py  test.py  test_it.py  train_Demons.py  train_Demons1.py  train_Demons2.py  train_Demons3.py  train_braininvaders.py  train_pyrimanian.py  train_val_test.py  training_braininvaders.ipynb  transforms.py  transforms1.py  types.py  utils.py  visualisation.py  vizualisation.py
eeg_models/datasets/: __init__.py  abstract.py  braininvaders.py  constants.py  datasets_Demons.py  demons.py  demons1.py  demons2.py
tests/: test_eegnet_parameters.py
