[tool.poetry]
name = "eeg-models"
version = "0.1.0"
description = "Electroencephalogram"
authors = ["kerventkm <kerventkm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
