[tool.poetry]
name = "eeg-models"
version = "0.1.0"
description = "Set of pretrained models and processing tools for EEG signals"
authors = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>", "kerventkm <kerventkm@gmail.com>"]
readme = "README.md"
repository = "https://github.com/girafe-ai/eeg-models"
documentation = "TBD"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["eeg-models"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
