[tool.poetry]
name = "eeg-models"
version = "0.1.0"
description = "Set of pretrained models and processing tools for EEG signals"
authors = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>", "kerventkm <kerventkm@gmail.com>"]
maintainers = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>", "kerventkm <kerventkm@gmail.com>"]
readme = "README.md"
repository = "https://github.com/girafe-ai/eeg-models"
documentation = "TBD"
keywords = ["eeg", "datasets", "reproducibility", "bci", "benchmark"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

# General machine learning stuff
numpy = "^1.21.4"
scipy = "^1.7.2"
scikit-learn = "^1.0.1"

# Deep Learning stuff
torch = "^1.10.0"

# EEG stuff
moabb = "^0.4.4"
somepytools = "^1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["eeg_models"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
